--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -3,14 +3,14 @@
     <div class="col-xs-12">
       <article class="post-entry shadow-z-1">
         <div class="entry-image">
-          <img src="/images/burning_shrine.jpg" class="img-responsive" alt="Image">
+          <img src="{{currentMap.headerWideImage}}" class="img-responsive" alt="{{currentMap.activityName}}">
         </div>
         <div class="entry-title">
           <h2 >Introducing: myDestinyTrialsReport</h2>
         </div>
         <ul class="entry-meta clearfix">
           <li>
-            <i class="fa fa-calendar-o"></i>
+            <i class="material-icons">today</i>
             11th Aug 2015
           </li>
         </ul>
