--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -6,25 +6,61 @@
           <img src="{{currentMap.headerWideImage}}" class="img-responsive" alt="{{currentMap.activityName}}">
         </div>
         <div class="entry-title">
-          <h2 >Introducing: myDestinyTrialsReport</h2>
+          <h2>Destiny Trials Report v2.0</h2>
         </div>
         <ul class="entry-meta clearfix">
           <li>
-            <i class="material-icons">today</i>
-            11th Aug 2015
+            <p><span class="material-icons">&#xE8DF;</span> 20th Aug 2015</p>
           </li>
         </ul>
         <div class="entry-content mt-10">
           <p>
-            Since we have seen a lot of interest in sharing your own stats through our app we have made it a little bit easier for you.
+            In case you missed it last week, we made a brief announcement about our new redesign and opened it up as a beta for you to test out.
+            Thanks to everyone that responded with feedback through emails,
+            <strong><a href="https://www.reddit.com/r/DestinyTheGame/comments/3haosq/destiny_trials_report_redesign_we_would_love_your/" target="_top">DTG</a></strong> and
+            <strong><a href="https://www.reddit.com/r/CruciblePlaybook/comments/3hapjz/destiny_trials_report_redesign_we_would_love_your/" target="_top">CruciblePlaybook</a></strong>.
           </p>
           <p>
-            <strong>my.DestinyTrialsReport.com</strong> works just like our fireteam search but instead of partnering you up with your
-            recent trials teammates we group you with your other characters.
+            Just to fill this page with more content here is some data that we have collected over the month.
           </p>
           <p>
-            Navigate to <strong><a href="http://my.DestinyTrialsReport.com" target="_top">http://my.DestinyTrialsReport.com/</a> </strong>
-            and use the search.
+          <table class="table table-striped table-hover ">
+            <thead>
+            <tr>
+              <th>Most Used Subclass</th>
+              <th>Most Searched Player</th>
+              <th>Platform</th>
+            </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Bladedancer (27.39%)</td>
+                <td>tripleWRECK</td>
+                <td>Playstation (51.95%)</td>
+              </tr>
+              <tr>
+                <td>Sunsinger (25.29%)</td>
+                <td>Gothalion</td>
+                <td>Xbox (48.05%)</td>
+              </tr>
+              <tr>
+                <td>Striker (18.93%)</td>
+                <td>kjhovey</td>
+              </tr>
+              <tr>
+                <td>Gunslinger (13.28%)</td>
+                <td>Allastere</td>
+              </tr>
+              <tr>
+                <td>Voidwalker (11.23%)</td>
+                <td>realkraftyy</td>
+              </tr>
+              <tr>
+                <td>Defender (3.88%)</td>
+                <td>Dattowatto</td>
+              </tr>
+            </tbody>
+          </table>
           </p>
           <p>
             <strong>If you come across any issue, error, or just want to send us a suggestion you can
