--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -24,7 +24,7 @@
             Just to fill this page with more content here is some data that we have collected over the month.
           </p>
           <p>
-          <table class="table table-striped table-hover ">
+          <table class="table table-striped table-hover col-xs-12">
             <thead>
             <tr>
               <th>Most Used Subclass</th>
