--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -3,17 +3,17 @@
     <div class="col-xs-12">
       <article class="post-entry shadow-z-1">
         <div class="entry-image">
-          <img src="{{currentMap.headerWideImage}}" class="img-responsive" alt="{{currentMap.activityName}}">
+          <img ng-src="{{currentMap.headerWideImage}}" class="img-responsive" alt="{{currentMap.activityName}}">
         </div>
         <div class="entry-title">
           <h2>Destiny Trials Report v2.0</h2>
         </div>
         <ul class="entry-meta clearfix">
           <li>
-            <p><span class="material-icons">&#xE8DF;</span> 20th Aug 2015</p>
+            <p><span class="material-icons">&#xE8DF;</span> August 20th, 2015</p>
           </li>
         </ul>
-        <div class="entry-content mt-10">
+        <div class="entry-content">
           <p>
             In case you missed it last week, we made a brief announcement about our new redesign and opened it up as a beta for you to test out.
             Thanks to everyone that responded with feedback through emails,
@@ -23,8 +23,7 @@
           <p>
             Just to fill this page with more content here is some data that we have collected over the month.
           </p>
-          <p>
-          <table class="table table-striped table-hover col-xs-12">
+          <table class="table table-striped table-hover table-bordered">
             <thead>
             <tr>
               <th>Most Used Subclass</th>
@@ -61,7 +60,6 @@
               </tr>
             </tbody>
           </table>
-          </p>
           <p>
             <strong>If you come across any issue, error, or just want to send us a suggestion you can
             <a href="mailto:destinytrialsreport@gmail.com" target="_top">email</a> us or open a ticket on
