--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="footer__ad">
-          <div ad-sense></div>
+          <div adsense></div>
         </div>
         <div class="footer__donate">
           <div class="footer__donate__header">
