--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -28,19 +28,19 @@
             <tr>
               <th>Most Used Subclass</th>
               <th>Most Searched Player</th>
-              <th>Platform</th>
+              <th class="hidden-xs">Platform</th>
             </tr>
             </thead>
             <tbody>
               <tr>
                 <td>Bladedancer (27.39%)</td>
                 <td>tripleWRECK</td>
-                <td>Playstation (51.95%)</td>
+                <td class="hidden-xs">Playstation (51.95%)</td>
               </tr>
               <tr>
                 <td>Sunsinger (25.29%)</td>
                 <td>Gothalion</td>
-                <td>Xbox (48.05%)</td>
+                <td class="hidden-xs">Xbox (48.05%)</td>
               </tr>
               <tr>
                 <td>Striker (18.93%)</td>
