very useful, but now redundant css removed

--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -8,7 +8,7 @@
         <div class="entry-title">
           <h2>Destiny Trials Report v2.0</h2>
         </div>
-        <ul class="entry-meta clearfix">
+        <ul class="entry-meta">
           <li>
             <p><span class="material-icons">&#xE8DF;</span> August 20th, 2015</p>
           </li>
@@ -25,11 +25,11 @@
           </p>
           <table class="table table-striped table-hover table-bordered">
             <thead>
-            <tr>
-              <th>Most Used Subclass</th>
-              <th>Most Searched Player</th>
-              <th class="hidden-xs">Platform</th>
-            </tr>
+              <tr>
+                <th>Most Used Subclass</th>
+                <th>Most Searched Player</th>
+                <th class="hidden-xs">Platform</th>
+              </tr>
             </thead>
             <tbody>
               <tr>
