--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -11,7 +11,10 @@
           </div>
           <div class="footer__colofon__contribute">
             <a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_blank">
-              Contribute on <img src="images/github.svg" />
+              Contribute on
+              <svg>
+                <use xlink:href="images/github.svg#Layer_1" />
+              </svg>
             </a>
           </div>
         </div>
