Weird stuff at bottom carousel fixed

--- a/app/styles/elements/_player.scss
+++ b/app/styles/elements/_player.scss
@@ -392,6 +392,8 @@
 ul[rn-carousel] {
   padding-left: 5%;
   padding-right: 5%;
+  margin-bottom: -3px;
+  padding-bottom: 3px;
 }
 
 ul[rn-carousel] > li {
