--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -11,10 +11,7 @@
           </div>
           <div class="footer__colofon__contribute">
             <a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_blank">
-              Contribute on
-              <svg viewBox="0 0 300 100">
-                <use xlink:href="images/github.svg#Layer_1" />
-              </svg>
+              Contribute on <img src="images/github.svg" />
             </a>
           </div>
         </div>
