style footer donate text

--- a/app/styles/elements/_footer.scss
+++ b/app/styles/elements/_footer.scss
@@ -23,8 +23,8 @@
     text-align: center;
   }
 
-  .player-hazard--friendly {
-    background: #666;
+  .player-hazard {
+    vertical-align: .15em;
   }
 }
 
