--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -16,8 +16,8 @@
         <div class="entry-content">
           <p>
             In case you missed it last week, we made a brief announcement about our new redesign and opened it up as a beta for you to test out.
-            Thanks to everyone that responded with feedback through emails,
-            <strong><a href="https://www.reddit.com/r/DestinyTheGame/comments/3haosq/destiny_trials_report_redesign_we_would_love_your/" target="_top">DTG</a></strong> and
+            Thanks to everyone that responded with feedback through email,
+            <strong><a href="https://www.reddit.com/r/DestinyTheGame/comments/3haosq/destiny_trials_report_redesign_we_would_love_your/" target="_top">DestinyTheGame</a></strong> and
             <strong><a href="https://www.reddit.com/r/CruciblePlaybook/comments/3hapjz/destiny_trials_report_redesign_we_would_love_your/" target="_top">CruciblePlaybook</a></strong>.
           </p>
           <p>
