--- a/app/styles/elements/_footer.scss
+++ b/app/styles/elements/_footer.scss
@@ -17,12 +17,16 @@
 }
 
 .footer__donate {
-  align-self: center;
   flex-shrink: 0;
   white-space: nowrap;
+  text-align: right;
+
+  .footer__donate__header {
+    padding-right: .46em;
+  }
 
   form {
-    text-align: center;
+    text-align: right;
   }
 
   .player-hazard {
@@ -57,7 +61,6 @@
 }
 
 .footer__colofon__contribute {
-
   img {
     height: 1.2em;
     vertical-align: -.25em;
@@ -85,7 +88,6 @@
 }
 
 @media all and (max-width: 767px) {
-
   .footer__content {
     flex-wrap: wrap;
   }
@@ -102,7 +104,6 @@
 
   .footer__donate {
     width: 50%;
-    text-align: center;
   }
 }
 
@@ -118,5 +119,10 @@
 
   .footer__donate {
     width: 100%;
+    text-align: center;
+
+    form {
+      text-align: center;
+    }
   }
 }
