--- a/app/styles/elements/_player.scss
+++ b/app/styles/elements/_player.scss
@@ -258,27 +258,83 @@
   padding: 1em 1em .8em 1em;
   border-top: 1px solid #eee;
   display: flex;
+  align-items: center;
+}
 
-  label {
-    display: block;
-    font-family: 'Roboto Condensed';
-    flex-shrink: 0;
-    font-weight: 300;
-    color: #999;
-    text-transform: uppercase;
-    font-size: .8em;
-    margin-bottom: 0;
-    margin-right: .6em;
-    float: none;
-    white-space: nowrap;
-  }
+.player-history__label,
+.player-history__kd-label {
+  display: block;
+  font-family: 'Roboto Condensed';
+  flex-shrink: 0;
+  font-weight: 300;
+  color: #999;
+  text-transform: uppercase;
+  font-size: .8em;
+  margin-bottom: 0;
+  margin-right: .6em;
+  float: none;
+  white-space: nowrap;
 }
 
 .player-history__matches {
   flex-grow: 1;
   overflow: hidden;
-  height: 1.3em;
+  line-height: 36px;
+  height: 33px;
+  overflow: hidden;
   direction: rtl;
+  position: relative;
+
+  &:after {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
+    height: 1px;
+    background: #999;
+    pointer-events: none;
+    content: "";
+  }
+}
+
+.player-history__kd-label {
+  color: #666;
+  margin-right: 0;
+  margin-left: 1em;
+  font-size: .75em;
+  position: relative;
+
+  span {
+    color: #999;
+  }
+
+  &:before,
+  &:after {
+    position: absolute;
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 11px;
+    line-height: 1em;
+    letter-spacing: normal;
+    text-transform: none;
+    word-wrap: normal;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+    left: 50%;
+    text-align: center;
+  }
+
+  &:before {
+    transform: translate(-50%, -.7em);
+    content: "\e5c7";
+  }
+
+  &:after {
+    transform: translate(-50%, .9em);
+    content: "\e5c5";
+  }
 }
 
 .player-history__match {
@@ -289,6 +345,7 @@
   opacity: 0.5;
   vertical-align: .1em;
   margin-left: 3px;
+  position: relative;
 
   &:hover {
     opacity: 1;
@@ -301,7 +358,6 @@
   &.player-history__match--loss {
     background-color: white;
     border: 1px solid $fail;
-    position: relative;
 
     &:after {
       position: absolute;
