--- a/app/styles/elements/_last-match.scss
+++ b/app/styles/elements/_last-match.scss
@@ -1,18 +1,22 @@
 .last-match__overview {
-  padding: 1em;
+  padding: 1em 0 0 0;
   background: linear-gradient( 180deg, $last-match-background, darken($last-match-background, 5%));
   border-bottom: 1px solid darken($last-match-background, 20%);
+  margin-bottom: 1em;
+  .stat span {
+    font-size: 1em;
+  }
 }
 
 .last-match__standing {
   margin-bottom: 1em;
   vertical-align: middle;
   text-align: center;
-  padding-right: 1em;
+  padding-right: 0;
 }
 
 .last-match__score {
-  font-size: 4em;
+  font-size: 2em;
 }
 
 .last-match__score--opponents {
