--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -8,7 +8,7 @@
       <ng-include src="'views/fireteam/weapons.html'"></ng-include>
       <ng-include src="'views/fireteam/gear.html'"></ng-include>
     </tab>
-    <tab heading="Last Match" analytics-on analytics-event="Click" analytics-category="Last Match">
+    <tab heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches">
       <ng-include src="'views/fireteam/history.html'"></ng-include>
     </tab>
     <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
@@ -23,7 +23,7 @@
     <tab heading="Maps" analytics-on analytics-event="Click" analytics-category="Maps">
       <ng-include src="'views/fireteam/maps.html'"></ng-include>
     </tab>
-    <tab heading="Last Match" analytics-on analytics-event="Click" analytics-category="Last Match">
+    <tab heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches">
       <ng-include src="'views/fireteam/history.html'"></ng-include>
     </tab>
   </tabset>
