css cleanup, remove self closing tags, add alts to images, use char refs for material icons, minor html cleanup

--- a/app/views/fireteam/addStats.html
+++ b/app/views/fireteam/addStats.html
@@ -141,7 +141,7 @@
         <!--</div>-->
         <!--<div class="col-xs-4 stat">-->
           <!--<span ng-bind="player.stats.orbsDropped.basic.displayValue"></span>-->
-          <!--<label>Orbs<br/>created</label>-->
+          <!--<label>Orbs<br>created</label>-->
         <!--</div>-->
       <!--</div>-->
     <!--</div>-->
