--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -48,12 +48,12 @@
                     <div class="btn-group">
                       <button class="btn btn-default btn-icon" type="button" ng-click="refreshInventory(fireteam)"
                               analytics-on analytics-event="Click" analytics-category="Refresh Inventory">
-                        <i class="material-icons">cached</i>
+                        <i class="material-icons">&#xE86A;</i>
                       </button>
                     </div>
                   </div>
                   <div class="main-search__submit">
-                    <button type="submit" class="hidden-sm hidden-md hidden-lg btn btn-default btn-icon" ng-disabled="status"><i class="material-icons">send</i></button>
+                    <button type="submit" class="hidden-sm hidden-md hidden-lg btn btn-default btn-icon" ng-disabled="status"><i class="material-icons">&#xE163;</i></button>
                     <button type="submit" class="hidden-xs btn btn-default btn-raised" ng-disabled="status">Search</button>
                   </div>
                 </div>
