--- a/app/views/fireteam/history.html
+++ b/app/views/fireteam/history.html
@@ -64,7 +64,7 @@
         <div class="last-match-weapon col-xs-12" ng-repeat="weapon in player.playerWeapons track by $index">
           <div class="row">
             <div class="col-xs-6 last-weapon-weapon__descr">
-              <img class="last-match-weapon__img img-responsive" ng-src="{{getWeaponByHash(weapon.referenceId).icon}}">
+              <img class="last-match-weapon__img img-responsive" ng-src="{{getWeaponByHash(weapon.referenceId).icon}}" alt="{{getWeaponByHash(weapon.referenceId).name}}">
               <span class="last-match-weapon__title" ng-bind="getWeaponByHash(weapon.referenceId).name"></span>
             </div>
             <div class="col-xs-2 stat">
@@ -81,7 +81,7 @@
              ng-if="getWeaponTitle(specialWeapon.id)">
           <div class="row">
             <div class="col-xs-6 last-weapon-weapon__descr">
-              <span class="last-match-weapon__img" style="background-image: url({{player.classNodes.abilities[specialWeapon.id].icon}});"></span>
+              <span class="last-match-weapon__img" style="background-image: url('{{player.classNodes.abilities[specialWeapon.id].icon}}')"></span>
               <span class="last-match-weapon__title" ng-bind="player.classNodes.abilities[specialWeapon.id].name"></span>
             </div>
             <div class="col-xs-2 stat">
@@ -97,7 +97,7 @@
     <div class="row">
       <div class="col-xs-2" ng-repeat="medal in player.medals track by $index"
            bs-popover="{title:DestinyMedalDefinition[medal.id].statName,content:DestinyMedalDefinition[medal.id].statDescription}">
-        <img class="img-responsive" ng-src="{{'https://www.bungie.net' + DestinyMedalDefinition[medal.id].iconImage}}">
+        <img class="img-responsive" ng-src="{{'https://www.bungie.net' + DestinyMedalDefinition[medal.id].iconImage}}" alt="{{DestinyMedalDefinition[medal.id].statName}}">
       </div>
     </div>
   </div>
