--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -11,7 +11,7 @@
           </div>
           <div class="footer__colofon__contribute">
             <a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_blank">
-              Contribute on <img src="images/github.svg" />
+              Contribute on <img src="images/github.svg" alt="GitHub">
             </a>
           </div>
         </div>
