--- a/app/views/fireteam/index.html
+++ b/app/views/fireteam/index.html
@@ -1,7 +1,7 @@
 <div class="hidden-lg hidden-md">
-  <ng-include src="'views/fireteam/mobile_carousel.html'"></ng-include>
+  <div ng-include="'views/fireteam/mobile_carousel.html'"></div>
 </div>
 
 <div class="col-xs-12 col-sm-6 col-md-4 hidden-sm hidden-xs" ng-repeat="player in fireteam track by $index">
-  <ng-include src="'views/fireteam/player.html'"></ng-include>
+  <div ng-include="'views/fireteam/player.html'"></div>
 </div>
