--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -1,30 +1,31 @@
 <div class="player shadow-z-1"
      ng-class="(player.isEditing || player.invalidResult) ? 'is-editing' : 'not-editing'"
      ng-if="fireteam[0].name && $index < 3">
-  <ng-include src="infoPartial"></ng-include>
+
+  <div ng-include="infoPartial"></div>
 
   <tabset class="player-tabs" ng-if="!subdomain">
     <tab heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped">
-      <ng-include src="'views/fireteam/weapons.html'"></ng-include>
-      <ng-include src="'views/fireteam/gear.html'"></ng-include>
+      <div ng-include="'views/fireteam/weapons.html'"></div>
+      <div ng-include="'views/fireteam/gear.html'"></div>
     </tab>
     <tab heading="Last Match" analytics-on analytics-event="Click" analytics-category="Last Match">
-      <ng-include src="'views/fireteam/history.html'"></ng-include>
+      <div ng-include="'views/fireteam/history.html'"></div>
     </tab>
     <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
-      <ng-include src="'views/fireteam/addStats.html'"></ng-include>
+      <div ng-include="'views/fireteam/addStats.html'"></div>
     </tab>
   </tabset>
 
   <tabset class="player-tabs" ng-if="subdomain">
     <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
-      <ng-include src="'views/fireteam/addStats.html'"></ng-include>
+      <div ng-include="'views/fireteam/addStats.html'"></div>
     </tab>
     <tab heading="Maps" analytics-on analytics-event="Click" analytics-category="Maps">
-      <ng-include src="'views/fireteam/maps.html'"></ng-include>
+      <div ng-include="'views/fireteam/maps.html'"></div>
     </tab>
     <tab heading="Last Match" analytics-on analytics-event="Click" analytics-category="Last Match">
-      <ng-include src="'views/fireteam/history.html'"></ng-include>
+      <div ng-include="'views/fireteam/history.html'"></div>
     </tab>
   </tabset>
 
@@ -80,7 +81,7 @@
             </li>
           </ul>
         </div>-->
-        <div class="recent-players" ng-show="$index >= 1">
+        <div class="recent-players" ng-show="!$first">
           <div class="edit-player-action__header">
             <span ng-bind="fireteam[0].name + '\'s recent teammates'"></span>
           </div>
