fix stats and try to dry up and limit api requests

--- a/app/views/fireteam/history.html
+++ b/app/views/fireteam/history.html
@@ -88,12 +88,12 @@
       </div>
     </div>
   </div>
-  <!--<div class="last-match__medals">
+  <div class="last-match__medals">
     <div class="row">
       <div class="col-xs-2" ng-repeat="medal in player.medals track by $index"
            bs-popover="{title:DestinyMedalDefinition[medal.id].statName,content:DestinyMedalDefinition[medal.id].statDescription}">
         <img class="img-responsive" ng-src="{{'https://www.bungie.net' + DestinyMedalDefinition[medal.id].iconImage}}">
       </div>
     </div>
-  </div>-->
+  </div>
 </div>
