--- a/app/styles/elements/_player.scss
+++ b/app/styles/elements/_player.scss
@@ -19,8 +19,8 @@
   cursor: pointer;
   position: absolute;
   margin-top: 1em;
-  margin-left: 1em;
-  left: 0;
+  margin-right: 1em;
+  right: 0;
   top: 0;
   height: 3em;
   width: 3em;
@@ -266,6 +266,7 @@
 }
 
 .player-kd__kd {
+  letter-spacing: -1px;
   font-weight: normal;
   font-size: 1.5em;
   line-height: 40px;
@@ -329,17 +330,15 @@
   }
 }
 
-.player-history__label,
-.player-history__kd-label {
+.player-history__label {
   display: block;
   font-family: 'Roboto Condensed';
-  flex-shrink: 0;
   font-weight: 300;
   color: #999;
   text-transform: uppercase;
   font-size: .8em;
   margin-bottom: 0;
-  margin-right: .6em;
+  margin-top: .3em;
   float: none;
   white-space: nowrap;
 }
@@ -376,6 +375,9 @@
   margin-left: 3px;
   position: relative;
   transform-origin: center center;
+  transition: transform ease .2s;
+  transition-delay: 1s;
+  will-change: transform;
 
   &:hover {
     opacity: 1;
