--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -1,19 +1,19 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12">
-      <article class="post-entry shadow-z-1">
-        <div class="entry-image">
+      <article class="blog-post shadow-z-1">
+        <div class="blog-post__img">
           <img ng-src="{{currentMap.headerWideImage}}" class="img-responsive" alt="{{currentMap.activityName}}">
         </div>
-        <div class="entry-title">
+        <div class="blog-post__title">
           <h2>Destiny Trials Report v2.0</h2>
         </div>
-        <ul class="entry-meta">
+        <ul class="blog-post__meta">
           <li>
             <p><span class="material-icons">&#xE8DF;</span> August 20th, 2015</p>
           </li>
         </ul>
-        <div class="entry-content">
+        <div class="blog-post__content">
           <p>
             In case you missed it last week, we made a brief announcement about our new redesign and opened it up as a beta for you to test out.
             Thanks to everyone that responded with feedback through email,
