--- a/app/views/player/equipped/gear.html
+++ b/app/views/player/equipped/gear.html
@@ -43,6 +43,6 @@
       <span class="gear-perk__title" ng-bind="classNode.name"></span>
     </div>
   </div>
-  <div class="gear__armor" ng-include="'views/fireteam/armor.html'">
+  <div class="gear__armor" ng-include="'views/player/equipped/armor.html'">
   </div>
 </div>
