--- a/app/views/player/index.html
+++ b/app/views/player/index.html
@@ -2,30 +2,29 @@
      ng-class="(player.isEditing || player.invalidResult) ? 'is-editing' : 'not-editing'"
      ng-if="fireteam[0].name && $index < 3">
 
-  <div ng-include="infoPartial"></div>
+  <div ng-include="'views/player/overview.html'"></div>
 
   <tabset class="player-tabs" ng-if="!subdomain">
     <tab heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped">
-      <div ng-include="'views/fireteam/weapons.html'"></div>
-      <div ng-include="'views/fireteam/gear.html'"></div>
+      <div ng-include="'views/player/equipped.html'"></div>
     </tab>
     <tab heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches">
-      <ng-include src="'views/fireteam/history.html'"></ng-include>
+      <div ng-include="'views/player/last-matches.html'"></div>
     </tab>
     <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
-      <div ng-include="'views/fireteam/addStats.html'"></div>
+      <div ng-include="'views/player/stats.html'"></div>
     </tab>
   </tabset>
 
   <tabset class="player-tabs" ng-if="subdomain">
     <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
-      <div ng-include="'views/fireteam/addStats.html'"></div>
+      <div ng-include="'views/player/stats.html'"></div>
     </tab>
     <tab heading="Maps" analytics-on analytics-event="Click" analytics-category="Maps">
-      <div ng-include="'views/fireteam/maps.html'"></div>
+      <div ng-include="'views/player/maps.html'"></div>
     </tab>
     <tab heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches">
-      <ng-include src="'views/fireteam/history.html'"></ng-include>
+      <div ng-include="'views/player/last-matches.html'"></div>
     </tab>
   </tabset>
 
